--- a/avatax_connector/views/account_tax_view.xml
+++ b/avatax_connector/views/account_tax_view.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<openerp>
+<odoo>
     <data>
         <record id="view_tax_form_avatax" model="ir.ui.view">
             <field name="name">account.tax.form.avatax</field>
@@ -13,6 +13,6 @@
             </field>
         </record>
     </data>
-</openerp>
+</odoo>
 
  
