--- a/avatax_connector/views/account_invoice_workflow.xml
+++ b/avatax_connector/views/account_invoice_workflow.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<openerp>
+<odoo>
     <data>
         
         <!-- This view is used to override the workflow for validate Invoice -->
     
-        <record id="account.act_open" model="workflow.activity">
+        <!-- <record id="account.act_open" model="workflow.activity">
             <field name="wkf_id" ref="account.wkf"/>
             <field name="name">open</field>
             <field name="action">action_date_assign()
@@ -12,7 +12,7 @@
                 invoice_validate()
                 action_commit_tax()</field>
             <field name="kind">function</field>
-        </record>
+        </record> -->
         
     </data>
-</openerp>
+</odoo>
