--- a/avatax_connector/views/avalara_salestax_data.xml
+++ b/avatax_connector/views/avalara_salestax_data.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<openerp>
+<odoo>
     <data noupdate="1">
 
        <!--
@@ -51,7 +51,7 @@
             <field name="code">I</field>
         </record>
 
-      <record id="direct_pay_permit_type" model="exemption.code">
+        <record id="direct_pay_permit_type" model="exemption.code">
             <field name="name">Direct Pay Permit</field>
             <field name="code">J</field>
         </record>
@@ -61,17 +61,17 @@
             <field name="code">K</field>
         </record>
 
-    <record id="other_type" model="exemption.code">
+        <record id="other_type" model="exemption.code">
             <field name="name">Other</field>
             <field name="code">L</field>
         </record>
 
-    <record id="local_government_type" model="exemption.code">
+        <record id="local_government_type" model="exemption.code">
             <field name="name">Local Government</field>
             <field name="code">N</field>
         </record>
 
-    <record id="commercial_aquaculture_type" model="exemption.code">
+        <record id="commercial_aquaculture_type" model="exemption.code">
             <field name="name">Commercial Aquaculture</field>
             <field name="code">P</field>
         </record>
@@ -89,7 +89,8 @@
         <record id="avatax" model="account.tax">
 	           <field name="name">AVATAX</field>
 	           <field eval="0.0" name="amount"/>
-	           <field name="type">percent</field>
+                <!-- oldname: type -->
+	           <field name="amount_type">percent</field>
 	           <!-- <field name="account_collected_id" ref="conf_iva"/>
 	           <field name="account_paid_id" ref="conf_iva"/>
 	           <field name="base_code_id" ref="tax_code_sales_X"/>
@@ -99,11 +100,6 @@
 	           <field name="type_tax_use">sale</field>
                    <field name="is_avatax">True</field>
 	       </record>
-	       
-        
-        
-        
-        
 
   </data>
-</openerp>
+</odoo>
