--- a/avatax_connector/views/partner_view.xml
+++ b/avatax_connector/views/partner_view.xml
@@ -48,25 +48,14 @@
 
 
       </field>
-    </record>
-    
+   </record>
+
     <record id="action_call_address_validation_method" model="ir.actions.server">
         <field name="name">Address Validation</field>
         <field name="model_id" ref="model_res_partner"/>
+        <field name="binding_model_id" ref="model_res_partner"/>
         <field name="state">code</field>
-        <field name="code">action = obj.multi_address_validation()</field>
-        <!-- 
-        <field name="date_validation"/>
-        <field name="validation_method"/> -->
+        <field name="code">records.multi_address_validation()</field>
     </record>
-        
-    <record id="action_call_address_validation" model="ir.values">
-            <field name="name">Address Validation Call</field>
-            <field name="key2">client_action_multi</field>
-            <field name="model">res.partner</field>
-            <field name="value" eval="'ir.actions.server,%d'%action_call_address_validation_method" />
-            <!-- <field name="object" eval="True" /> -->
-        </record>
-
     </data>
 </odoo>
