--- a/avatax_connector/views/product_view.xml
+++ b/avatax_connector/views/product_view.xml
@@ -53,7 +53,6 @@
         <record id="view_product_normal_form_avatax_inherit" model="ir.ui.view">
             <field name="name">product.normal.form.avatax</field>
             <field name="model">product.template</field> 
-            <!--<field name="mode">primary</field>-->
             <field name="inherit_id" ref="product.product_template_form_view"/>
             <field name="arch" type="xml">
                 <xpath expr="//notebook" position="inside">
@@ -68,15 +67,20 @@
                         <field name="description" placeholder="describe the product characteristics..." nolabel="1"/>
                     </group>
                 </xpath>
-<!--                <field name="default_code" position="replace"/>
-		        
-		        <div name="options" groups="base.group_user" position="before">
-		            <label for="default_code" class="oe_edit_only"/>
-                    <h2><field name="default_code"  placeholder="Product Code"/></h2>
-		        </div>  -->
             </field>
         </record>
-        
+
+        <record id="product_template_only_form_view_inherit" model="ir.ui.view">
+            <field name="name">product.template.product.form.avatax</field>
+            <field name="model">product.template</field>
+            <field name="inherit_id" ref="product.product_template_only_form_view"/>
+            <field name="arch" type="xml">
+                <field name="default_code" position="attributes">
+                    <attribute name="required">1</attribute>
+                </field>
+            </field>
+        </record>
+
         <!--
         Product Category
         -->
