--- a/aio_gift_card_store_credit/views/sale_view.xml
+++ b/aio_gift_card_store_credit/views/sale_view.xml
@@ -1,5 +1,7 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0"?>
 <odoo>
+<!-- Copyright 2018 Open Source Integrators
+     License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl). -->
 
     <record id="view_order_form_sc_amount_inherit" model="ir.ui.view">
         <field name="name">sale.order.sc.amount.form</field>
