--- a/sale_order_line_available_to_sell/views/sale_view.xml
+++ b/sale_order_line_available_to_sell/views/sale_view.xml
@@ -1,5 +1,7 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0"?>
 <odoo>
+<!-- Copyright 2018 Open Source Integrators
+     License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl). -->
 
     <!-- Sale Order Inherited Form View -->
     <record id="view_order_qty_to_sell_form" model="ir.ui.view">
