--- a/sale_order_line_discount_amount/views/report_invoice.xml
+++ b/sale_order_line_discount_amount/views/report_invoice.xml
@@ -4,7 +4,7 @@
      License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl). -->
 
     <template id="report_invoice_discount" inherit_id="account.report_invoice_document">
-        <xpath expr="//table[hasclass('table table-condensed')]//thead//tr//th[4]" position="replace">
+        <xpath expr="//table[hasclass('table-condensed')]//thead//tr//th[4]" position="replace">
             <th class="text-right" groups="sale.group_discount_per_so_line">Disc.</th>
         </xpath>
         <xpath expr="//tbody[hasclass('invoice_tbody')]//tr//td[4]" position="replace">
