--- a/osi_fsm_timeline_person_filter/views/template.xml
+++ b/osi_fsm_timeline_person_filter/views/template.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
 
-    <template id="assets_backend" name="web_timeline_user_filter assets" inherit_id="web.assets_backend">
+    <template id="assets_backend" name="web_timeline_user_filter assets"
+              inherit_id="web.assets_backend">
         <xpath expr="." position="inside">
-            <link rel="stylesheet" href="/osi_fsm_timeline_person_filter/static/src/less/osi_fsm_timeline_person_filter.less"/>
-            <script type="text/javascript" src="/osi_fsm_timeline_person_filter/static/src/js/osi_fsm_timeline_person_filter.js"/>
+            <link rel="stylesheet"
+                  href="/osi_fsm_timeline_person_filter/static/src/less/osi_fsm_timeline_person_filter.less"/>
+            <script type="text/javascript"
+                    src="/osi_fsm_timeline_person_filter/static/src/js/osi_fsm_timeline_person_filter.js"/>
         </xpath>
     </template>
 
