--- a/helpdesk_fsm/views/helpdesk_ticket_views.xml
+++ b/helpdesk_fsm/views/helpdesk_ticket_views.xml
@@ -12,11 +12,11 @@
             <notebook position="inside">
                 <page string="Service Requests">
                     <field name="fsm_order_ids">
-                        <tree editable="bottom">
-                            <field name="name" readonly="1"/>
-                            <field name="customer_id" readonly="1"/>
-                            <field name="location_id" readonly="1"/>
-                            <field name="stage_id" readonly="1"/>
+                        <tree>
+                            <field name="name"/>
+                            <field name="customer_id"/>
+                            <field name="location_id"/>
+                            <field name="stage_id"/>
                         </tree>
                     </field>
                 </page>
