[IMP] Fix errors

--- a/helpdesk_scope/views/helpdesk_ticket.xml
+++ b/helpdesk_scope/views/helpdesk_ticket.xml
@@ -8,7 +8,7 @@
         <field name="inherit_id" ref="helpdesk.helpdesk_ticket_view_form"/>
         <field name="arch" type="xml">
             <field name="priority" position="before">
-                <field name="scope"/>                      
+                <field name="scope_id"/>                      
             </field>
         </field>
     </record>
