--- a/agreement_helpdesk/views/helpdesk_ticket_view.xml
+++ b/agreement_helpdesk/views/helpdesk_ticket_view.xml
@@ -9,7 +9,22 @@
         <field name="arch" type="xml">
             <field name="user_id" position="after">
                 <field name="agreement_id"/>
+                <field name="serviceprofile_id"
+                       domain="[('agreement_id', '=', agreement_id)]"/>
             </field>
+        </field>
+    </record>
+    
+    <!-- Inherit helpdesk.ticket search view-->
+    <record id="helpdesk_tickets_view_search_agreement" model="ir.ui.view">
+        <field name="name">helpdesk.ticket.select.agreement</field>
+        <field name="model">helpdesk.ticket</field>
+        <field name="inherit_id" ref="helpdesk.helpdesk_tickets_view_search"/>
+        <field name="arch" type="xml">
+            <xpath expr="//group" position="inside">
+                <filter string="Service Profile" domain="[]"
+                        context="{'group_by':'serviceprofile_id'}"/>
+            </xpath>
         </field>
     </record>
 </odoo>
