--- a/agreement_helpdesk/views/agreement_view.xml
+++ b/agreement_helpdesk/views/agreement_view.xml
@@ -8,8 +8,13 @@
         <field name="inherit_id" ref="agreement.partner_agreement_form_view"/>
         <field name="arch" type="xml">
             <div class="oe_button_box" position="inside">
-                <button name="action_view_ticket" type="object" class="oe_stat_button" icon="fa-pencil-square-o" attrs="{'invisible': [('ticket_count', '=', 0)]}">
-                    <field name="ticket_count" widget="statinfo" string="Tickets"/>
+                <button name="action_view_ticket"
+                        type="object"
+                        class="oe_stat_button"
+                        icon="fa-pencil-square-o">
+                    <field name="ticket_count"
+                           widget="statinfo"
+                           string="Tickets"/>
                 </button>
             </div>
         </field>
