--- a/agreement_rma/views/rma_view.xml
+++ b/agreement_rma/views/rma_view.xml
@@ -7,7 +7,8 @@
         <field name="inherit_id" ref="rma.view_rma_line_form"/>
         <field name="arch" type="xml">
             <xpath expr="//field[@name='partner_id']" position="before">
-                <field name="agreement_id"/>
+                <field name="agreement_id"
+                       domain="[('partner_id', '=', partner_id)]"/>
                 <field name="serviceprofile_id"
                        domain="[('agreement_id', '=', agreement_id)]"/>
             </xpath>
