--- a/helpdesk_fieldservice/views/fsm_order_views.xml
+++ b/helpdesk_fieldservice/views/fsm_order_views.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0"?>
 <odoo>
-<!-- Copyright 2018 Open Source Integrators
-     License LGPL-3.0 or later (http://www.gnu.org/licenses/lgpl). -->
 
     <!-- FieldService Order Form View -->
     <record id="view_fsm_order_ticket_form" model="ir.ui.view">
@@ -9,9 +7,9 @@
         <field name="model">fsm.order</field>
         <field name="inherit_id" ref="fieldservice.fsm_order_form"/>
         <field name="arch" type="xml">
-            <field name="person_id" position="after">
+            <xpath expr="//group[@id='others-right']" position="inside">
                 <field name="ticket_id"/>
-            </field>
+            </xpath>
         </field>
     </record>
 
