--- a/helpdesk_fieldservice/views/fsm_location_views.xml
+++ b/helpdesk_fieldservice/views/fsm_location_views.xml
@@ -1,14 +1,29 @@
 <?xml version="1.0"?>
 <odoo>
 
+    <record model="ir.actions.act_window"
+            id="action_fsm_location_ticket">
+        <field name="name">Helpdesk Tickets</field>
+        <field name="type">ir.actions.act_window</field>
+        <field name="res_model">helpdesk.ticket</field>
+        <field name="view_type">form</field>
+        <field name="view_mode">tree,form</field>
+        <field name="domain">[('fsm_location_id', '=', active_id)]</field>
+        <field name="help" type="html">
+            <p class="oe_view_nocontent_create">
+                Create Helpdesk Tickets
+            </p>
+        </field>
+    </record>
+
     <!-- FieldService Location Form View -->
     <record id="view_fsm_location_ticket_form" model="ir.ui.view">
         <field name="name">view.fsm.location.ticket.form</field>
-        <field name="model">fsm.order</field>
+        <field name="model">fsm.location</field>
         <field name="inherit_id" ref="fieldservice.fsm_location_form_view"/>
         <field name="arch" type="xml">
             <div class="oe_button_box" position="inside">
-                <button name="action_view_ticket"
+                <button name="action_fsm_location_ticket"
                         type="object"
                         class="oe_stat_button"
                         icon="fa-pencil-square-o">
