--- a/helpdesk_scope/views/helpdesk_team.xml
+++ b/helpdesk_scope/views/helpdesk_team.xml
@@ -6,11 +6,22 @@
         <field name="name">helpdesk.ticket.team.scope</field>
         <field name="model">helpdesk.team</field>
         <field name="inherit_id" ref="helpdesk.helpdesk_team_view_form"/>
-        <field name="arch" type="xml">                
-            <xpath expr="//div[7]/div[1]/div[2]/div[2]" position="after">
-                <div>
-                    <label for="scope_ids"/>
-                    <field name="scope_ids" widget="many2many_tags"/>
+        <field name="arch" type="xml">
+            <xpath expr="//div[@id='sla']" position="after">
+                <div class="col-md-6 o_setting_box" id="scope">
+                    <div class="o_setting_left_pane">
+                        <field name="use_scope"/>
+                    </div>
+                    <div class="o_setting_right_pane">
+                        <label for="use_scope"/>
+                        <div class="text-muted">
+                            Set up your Scopes
+                        </div>
+                        <div attrs="{'invisible': [('use_scope', '=', False)]}" class="mt16">
+                            <label for="scope_ids"/>
+                            <field name="scope_ids" widget="many2many_tags"/>
+                        </div>
+                    </div>
                 </div>
             </xpath>
         </field>
