--- a/helpdesk_fieldservice/views/fsm_location_views.xml
+++ b/helpdesk_fieldservice/views/fsm_location_views.xml
@@ -23,7 +23,7 @@
         <field name="inherit_id" ref="fieldservice.fsm_location_form_view"/>
         <field name="arch" type="xml">
             <div class="oe_button_box" position="inside">
-                <button name="action_fsm_location_ticket"
+                <button name="action_view_ticket"
                         type="object"
                         class="oe_stat_button"
                         icon="fa-pencil-square-o">
