--- a/agreement_sale_subscription/views/agreement.xml
+++ b/agreement_sale_subscription/views/agreement.xml
@@ -1,19 +1,18 @@
 <?xml version="1.0"?>
 <odoo>
-<!-- Copyright 2018 Open Source Integrators
-     License LGPL-3.0 or later (http://www.gnu.org/licenses/lgpl). -->
+    <!-- Copyright 2018 Open Source Integrators
+         License LGPL-3.0 or later (http://www.gnu.org/licenses/lgpl). -->
 
     <!-- Agreement Form View -->
-	<record id="agreement_subscription_form_view" model="ir.ui.view">
+    <record id="agreement_subscription_form_view" model="ir.ui.view">
         <field name="name">agreement.subscription.form.view</field>
         <field name="model">agreement</field>
-        <field name="inherit_id" ref="agreement.partner_agreement_form_view"/>
+        <field name="inherit_id" ref="agreement_sale.agreement_sale_form_view"/>
         <field name="arch" type="xml">
-            <group name="sale_group" position="after">
-                <group>
-                    <field name="subscription_id" readonly="1"/>
-                </group>
+            <group id="sale-right" position="inside">
+                <field name="subscription_id" readonly="1"/>
             </group>
         </field>
     </record>
+
 </odoo>
